syntax = "proto3";

package protofile;



message Person{
    string first_name = 1 ;
    string last_name = 2;
    string date_of_birth = 3;
    bool cool = 4;
    int32 arguments_won = 5;
    repeated Hobby hobby = 6;
}

message Hobby{
    string name = 1;
    string description = 2;
}

